Fri Aug 30 10:11:15 2002  George Lebl <jirka@5z.com>

	* configure.in: we no longer need libglade-convert so don't check for
	  it

Tue Aug 27 18:41:17 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.10

Tue Aug 27 18:40:11 2002  George Lebl <jirka@5z.com>

	* gdm-safe-restart.in, gdm-restart.in, gdm-stop.in: use the
	  expanded version of the sysconf prefix to fix installation
	  into weird prefixes

Tue Aug 27 18:35:16 2002  George Lebl <jirka@5z.com>

	* daemon/server.c: tiny bit of cleanup

Tue Aug 27 18:14:20 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c: when we get the term signal do cleanup but no
	  longer wait for message ackgnoledgement from the daemon since the
	  daemon may no longer be entering mainloop and may not even be
	  processing messages.

Sat Aug 24 18:40:25 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.9

Fri Aug 23 16:45:16 2002  George Lebl <jirka@5z.com>

	* daemon/server.c: redo the SIGCHLD handler to be done in a saner
	  manner.

Fri Aug 23 15:27:55 2002  George Lebl <jirka@5z.com>

	* daemon/server.c: do a cool hack to figure out when the server
	  restarts.  Fork a process, open the display, HUP the server and
	  have the process wait for an xioerror and die.

	* daemon/display.c: add some debugging

Fri Aug 23 14:12:10 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c:  Cleanup the exit stuff

	* daemon/display.c, daemon/gdm.c: don't do setsid on -nodaemon
	  as that breaks running from init and do it for the slave as
	  that's correct.

	* daemon/slave.c, daemon/display.c, daemon/gdm.c:  Cleanup
	  killing children a bit, and session cleanup stuff.  Don't
	  kill pids not greater then 1 to be extra anal and if we can't
	  fork the slave set the pid to 0 and not leave it at -1.

	* daemon/server.c: kill redundant line

Fri Aug 23 11:04:38 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, gui/gdmlogin.c,
	  gui/greeter/greeter.c: Whack DefaultLocale as that