@@ -16,6 +16,8 @@ TODO things (some must wait until 2.1):
   - in slave child handler check that the server dead stuff can actually wipe
     cookies (it needs to have the uid of the user) (probably so)
 
+  - unset signal handlers when going into children
+
 Languages should be read from available locales.  Look at source  for
 locale_config.  Currently the way we do things is utter shit.
 
